# fileSyncer

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  compile_commands.json  config.txt.example  main.cpp  mainClient.cpp  message.proto  vcpkg.json
.github/workflows/: cmake.yml
proto/: CMakeLists.txt  message.proto
src/: config.txt.example
src/client/: ClientConnection.cpp  ClientConnection.h  ClientListener.cpp  ClientListener.h  ClientRequestHandler.cpp  ClientRequestHandler.h  Connection.cpp  Connection.h  mainClient.cpp
src/common/: Connection.h  MessageComunication.cpp  MessageComunication.h  RwLock.h  utils.cpp  utils.h
src/server/: Election.cpp  Election.h  Replica.cpp  Replica.h  RequestHandler.cpp  RequestHandler.h  Server.cpp  Server.h  ServerState.cpp  ServerState.h  TransactionManager.cpp  TransactionManager.h  main.cpp
src/server/admin/: AdminListener.cpp  AdminListener.h  AdminRequestHandler.cpp  AdminRequestHandler.h
src/server/interfaces/: Listener.cpp  Listener.h  RequestHandler.cpp  RequestHandler.h
src/server/service/: ServerRequestHandler.cpp  ServerRequestHandler.h  ServiceListener.cpp  ServiceListener.h  ServiceRequestHandler.cpp  ServiceRequestHandler.h
src/server/transactions/: CreateSessionTransaction.cpp  CreateSessionTransaction.h  CreateUserTransaction.cpp  CreateUserTransaction.h  FileChangeTransaction.cpp  FileChangeTransaction.h  NewFrontendTransaction.cpp  NewFrontendTransaction.h  RemoveSessionTransaction.cpp  RemoveSessionTransaction.h  Transaction.cpp  Transaction.h  TransactionListener.cpp  TransactionListener.h  TransactionManager.cpp  TransactionManager.h  TransactionRequestHandler.cpp  TransactionRequestHandler.h
test/: client.cpp  hashTestFile.txt
